# static-cam-object-tracking

./: .gitignore  QUICKSTART.md  README.md  demo.py  pyproject.toml  requirements.txt  setup.bat  setup.sh  verify.py
src/: __init__.py  config.py  detector.py  detector_with_tracking.py  main.py  tracker.py  utils.py  yolo_tracker.py
