[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "static-cam-object-tracking"
version = "0.1.0"
description = "Object tracking system using YOLOv11 with CUDA and TensorRT support"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-contrib-python>=4.12.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "onnx<1.18.0",
    "onnxruntime-gpu>=1.22.0",
    "onnxslim>=0.1.59",
    "tensorrt>=10.12.0.36",
    "lap>=0.5.12"
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cu121"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
